<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".vista.HorarioCuadrante">

    <TableLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lunes"
                android:id="@+id/textView8"
                android:layout_column="1"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/martes"
                android:id="@+id/textView9"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/miercoles"
                android:id="@+id/textView10"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jueves"
                android:id="@+id/textView11"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viernes"
                android:id="@+id/textView12"
                android:layout_weight="1"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="#aacacf">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1º"
                android:id="@+id/textView2"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt00"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt01"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt02"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt03"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt04"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2º"
                android:id="@+id/textView3"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt10"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt11"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt12"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt13"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt14"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="#aacacf">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3º"
                android:id="@+id/textView4"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt20"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt21"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt22"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt23"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt24"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4º"
                android:id="@+id/textView5"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt30"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt31"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt32"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt33"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt34"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="#aacacf">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5º"
                android:id="@+id/textView6"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt40"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt41"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt42"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt43"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt44"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6º"
                android:id="@+id/textView7"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt50"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt51"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt52"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt53"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/txt54"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center" />
        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horario"
        android:id="@+id/textView"
        android:layout_span="3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textoGrupo"
        android:layout_span="3"
        android:layout_weight="1"
        android:layout_column="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginLeft="10dp" />
</RelativeLayout>


